fixes footer display on mobile

--- a/style.css
+++ b/style.css
@@ -210,6 +210,11 @@ input[type=submit]:hover{
     .game-rules{
       margin-top: 0;
     }
+    .footer{
+      background: #fff;
+      bottom: 0;
+      position: sticky;
+    }
 }
   @media (max-width: 666px) {
     .container{
